--- a/pub/cfmem.yaml
+++ b/pub/cfmem.yaml
@@ -51,33 +51,6 @@ proxies:
       headers:
         host: admin.arzonhost.ir
   - &id004
-    name: 🇺🇸_US_美国->🇷🇺_RU_俄罗斯联邦
-    type: trojan
-    server: 172.67.204.84
-    port: 443
-    udp: true
-    password: qj1Dz1CJmFQRhWr1SP80aA
-    sni: cdn-21.gsmxreality.com
-    skip-cert-verify: true
-    network: grpc
-    grpc-opts:
-      grpc-service-name: 443trojan
-  - &id005
-    name: 🇺🇸_US_美国->🇬🇧_GB_英国_1
-    type: vmess
-    server: mizban.arzonhost.ir
-    port: 2086
-    cipher: auto
-    uuid: e690ff9e-1676-4be3-d136-dcae586cb1e7
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: mizban.arzonhost.ir
-  - &id006
     name: 🇺🇸_US_美国->🇫🇷_FR_法国_3
     type: vmess
     server: 104.21.4.14
@@ -92,10 +65,52 @@ proxies:
       path: /
       headers:
         host: admin.arzonhost.ir
-  - &id007
-    name: 🇦🇪_AE_阿联酋->🇬🇧_GB_英国
+  - &id005
+    name: 🇺🇸_US_美国_1
     type: vmess
-    server: 94.140.0.110
+    server: cfcdn1.sanfencdn9.com
+    port: 2052
+    cipher: auto
+    uuid: 07a902d1-7c2d-47de-f2c5-c2236fc7cd46
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: usxm.inekokkk.top
+  - &id006
+    name: 🇺🇸_US_美国->🇬🇧_GB_英国_1
+    type: vmess
+    server: mizban.arzonhost.ir
+    port: 2086
+    cipher: auto
+    uuid: e690ff9e-1676-4be3-d136-dcae586cb1e7
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: mizban.arzonhost.ir
+  - &id007
+    name: 🇺🇸_US_美国_2
+    type: trojan
+    server: 172.67.204.84
+    port: 443
+    udp: true
+    password: qj1Dz1CJmFQRhWr1SP80aA
+    sni: cdn-21.gsmxreality.com
+    skip-cert-verify: true
+    network: grpc
+    grpc-opts:
+      grpc-service-name: 443trojan
+  - &id008
+    name: 🇺🇸_US_美国_3
+    type: vmess
+    server: cdn.vds-server.ir
     port: 8880
     cipher: auto
     uuid: 0d1bf26a-ce97-4707-a270-7f4d2ae37334
@@ -106,44 +121,8 @@ proxies:
     ws-opts:
       path: /
       headers:
-        host: food.zhaal.ir
-  - &id008
-    name: 🇨🇦_CA_加拿大_1
-    type: vmess
-    server: 158.51.123.111
-    port: 443
-    cipher: auto
-    uuid: 03fcc618-b93d-6796-6aed-8a38c975d581
-    alterId: 0
-    tls: true
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /linkvws
+        host: cdn.vds-server.ir
   - &id009
-    name: 🇨🇦_CA_加拿大_2
-    type: vmess
-    server: 23.162.200.227
-    port: 443
-    cipher: auto
-    uuid: 03fcc618-b93d-6796-6aed-8a38c975d581
-    alterId: 0
-    tls: true
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /linkvws
-  - &id010
-    name: 🇮🇹_IT_意大利
-    type: trojan
-    server: it01.freeflyingcloud.xyz
-    port: 48102
-    udp: true
-    password: 6d257b63-0632-4dd6-b021-3085f8dc28b2
-    sni: it01.freeflyingcloud.xyz
-    skip-cert-verify: true
-    network: tcp
-  - &id011
     name: 🇺🇸_US_美国->🇬🇧_GB_英国_2
     type: vmess
     server: 172.67.188.156
@@ -158,7 +137,22 @@ proxies:
       path: /
       headers:
         host: cdn.vds-server.ir
-  - &id012
+  - &id010
+    name: 🇦🇪_AE_阿联酋->🇬🇧_GB_英国
+    type: vmess
+    server: 94.140.0.110
+    port: 8880
+    cipher: auto
+    uuid: 0d1bf26a-ce97-4707-a270-7f4d2ae37334
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: food.zhaal.ir
+  - &id011
     name: 🇺🇸_US_美国->🇬🇧_GB_英国_3
     type: vmess
     server: 104.21.19.202
@@ -173,7 +167,136 @@ proxies:
       path: /
       headers:
         host: cdn.vds-server.ir
+  - &id012
+    name: 🇺🇸_US_美国->🇹🇷_TR_土耳其_1
+    type: vmess
+    server: tu.mahilu.site
+    port: 2095
+    cipher: auto
+    uuid: 7a737f41-b792-4260-94ff-3d864da67b80
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: tu.mahilu.site
   - &id013
+    name: 🇺🇸_US_美国->🇹🇷_TR_土耳其_2
+    type: vmess
+    server: 104.21.82.39
+    port: 2095
+    cipher: auto
+    uuid: 7a737f41-b792-4260-94ff-3d864da67b80
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: tu.mahilu.site
+  - &id014
+    name: 🇷🇺_RU_俄罗斯联邦
+    type: vmess
+    server: 85.117.234.167
+    port: 80
+    cipher: auto
+    uuid: 1a363dc9-698c-49d2-e00d-c43005f64c40
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /TG@dns68免费节点
+  - &id015
+    name: 🇨🇦_CA_加拿大
+    type: vmess
+    server: 23.162.200.227
+    port: 443
+    cipher: auto
+    uuid: 03fcc618-b93d-6796-6aed-8a38c975d581
+    alterId: 0
+    tls: true
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /linkvws
+  - &id016
+    name: 🇺🇸_US_美国_4
+    type: vmess
+    server: yh5.dtku41.xyz
+    port: 8080
+    cipher: auto
+    uuid: 82cb93a3-65a9-4dac-a2a7-d997b6c26d6a
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: 82cb93a3-65a9-4dac-a2a7-d997b6c26d6a-vm
+      headers:
+        host: fantastic-doe-bids-ended.trycloudflare.com
+  - &id017
+    name: 🇺🇸_US_美国_5
+    type: vmess
+    server: yh7.dtku41.xyz
+    port: 8080
+    cipher: auto
+    uuid: 028c8131-9e3e-4836-94ac-ea7f24d4d05a
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: 028c8131-9e3e-4836-94ac-ea7f24d4d05a-vm
+      headers:
+        host: booty-pensions-scheduling-blogging.trycloudflare.com
+  - &id018
+    name: 🇺🇸_US_美国_6
+    type: trojan
+    server: it01.freeflyingcloud.xyz
+    port: 48102
+    udp: true
+    password: ecc532e2-3f8b-4a30-b176-78951fda6542
+    sni: it01.freeflyingcloud.xyz
+    skip-cert-verify: true
+    network: tcp
+  - &id019
+    name: 🇺🇸_US_美国_7
+    type: trojan
+    server: 23.142.200.175
+    port: 443
+    udp: true
+    password: 27876_t7d7f4e3f
+    skip-cert-verify: true
+    network: tcp
+  - &id020
+    name: 🇬🇧_GB_英国
+    type: trojan
+    server: uk01.freeflyingcloud.xyz
+    port: 22252
+    udp: true
+    password: 0d5b3d65-e71e-4235-bf68-ea753ad87cc2
+    sni: uk01.freeflyingcloud.xyz
+    skip-cert-verify: true
+    network: tcp
+  - &id021
+    name: 🇺🇸_US_美国_8
+    type: ss
+    server: 38.110.1.111
+    port: 8000
+    password: KixLvKzwjekG00rm
+    cipher: aes-256-gcm
+  - &id022
+    name: 🇺🇸_US_美国_9
+    type: ss
+    server: 38.110.1.51
+    port: 8090
+    password: PCnnH6SQSnfoS27
+    cipher: aes-256-gcm
+  - &id023
     name: 🇺🇸_US_美国->🇨🇦_CA_加拿大_1
     type: vmess
     server: 104.20.26.40
@@ -188,22 +311,7 @@ proxies:
       path: 82cb93a3-65a9-4dac-a2a7-d997b6c26d6a-vm
       headers:
         host: fantastic-doe-bids-ended.trycloudflare.com
-  - &id014
-    name: 🇺🇸_US_美国->🇹🇷_TR_土耳其
-    type: vmess
-    server: tu.mahilu.site
-    port: 2095
-    cipher: auto
-    uuid: 7a737f41-b792-4260-94ff-3d864da67b80
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: tu.mahilu.site
-  - &id015
+  - &id024
     name: 🇺🇸_US_美国->🇨🇦_CA_加拿大_2
     type: vmess
     server: 104.19.58.60
@@ -218,13 +326,54 @@ proxies:
       path: d9c5ec6a-a8d8-4732-8447-56fbd2f93e96-vm
       headers:
         host: concentrations-taxi-about-recognised.trycloudflare.com
-  - &id016
-    name: 🇺🇸_US_美国->🇬🇧_GB_英国_4
+  - &id025
+    name: 🇺🇸_US_美国_10
+    type: ss
+    server: 38.110.1.197
+    port: 5003
+    password: g5MeD6Ft3CWlJId
+    cipher: aes-256-gcm
+  - &id026
+    name: 🇺🇸_US_美国_11
     type: vmess
-    server: cdn.vds-server.ir
-    port: 8880
+    server: yh4.dtku41.xyz
+    port: 8080
     cipher: auto
-    uuid: 0d1bf26a-ce97-4707-a270-7f4d2ae37334
+    uuid: 028c8131-9e3e-4836-94ac-ea7f24d4d05a
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: 028c8131-9e3e-4836-94ac-ea7f24d4d05a-vm
+      headers:
+        host: booty-pensions-scheduling-blogging.trycloudflare.com
+  - &id027
+    name: 🇬🇮_GI_直布罗陀
+    type: vmess
+    server: 95.164.4.51
+    port: 8443
+    cipher: auto
+    uuid: 574363e2-e447-460d-a5b2-e662d6813afe
+    alterId: 0
+    tls: true
+    skip-cert-verify: true
+    servername: br-v2ray.ipracevpn.com
+    network: tcp
+  - &id028
+    name: 🇺🇸_US_美国_12
+    type: ss
+    server: 38.110.1.51
+    port: 8091
+    password: PCnnH6SQSnfoS27
+    cipher: aes-256-gcm
+  - &id029
+    name: 🇺🇸_US_美国_13
+    type: vmess
+    server: us219.netfilx.live
+    port: 80
+    cipher: auto
+    uuid: 1e65ec6d-9a42-4cd0-8c51-63030970134f
     alterId: 0
     tls: false
     skip-cert-verify: true
@@ -232,17 +381,22 @@ proxies:
     ws-opts:
       path: /
       headers:
-        host: cdn.vds-server.ir
-  - &id017
-    name: 🇸🇪_SE_瑞典
-    type: trojan
-    server: fr01.freeflyingcloud.xyz
-    port: 30502
-    udp: true
-    password: 89148410-25da-4dd9-8d32-247ca226e041
-    sni: fr01.freeflyingcloud.xyz
+        host: us219.netfilx.live
+  - &id030
+    name: 🇨🇳_CN_中国
+    type: vmess
+    server: data-us-v1.shwjfkw.cn
+    port: 20401
+    cipher: auto
+    uuid: b1478e24-4916-3abe-8f17-15931012ecbe
+    alterId: 0
+    tls: false
     skip-cert-verify: true
-    network: tcp
+    network: ws
+    ws-opts:
+      path: /debian
+      headers:
+        host: data-us-v1.shwjfkw.cn
 proxy-groups:
   - name: PROXY
     type: select
@@ -286,6 +440,19 @@ proxy-groups:
       - *id015
       - *id016
       - *id017
+      - *id018
+      - *id019
+      - *id020
+      - *id021
+      - *id022
+      - *id023
+      - *id024
+      - *id025
+      - *id026
+      - *id027
+      - *id028
+      - *id029
+      - *id030
   - name: LOAD-BALANCE
     type: load-balance
     url: http://www.gstatic.com/generate_204
@@ -308,6 +475,19 @@ proxy-groups:
       - *id015
       - *id016
       - *id017
+      - *id018
+      - *id019
+      - *id020
+      - *id021
+      - *id022
+      - *id023
+      - *id024
+      - *id025
+      - *id026
+      - *id027
+      - *id028
+      - *id029
+      - *id030
   - name: SELECT
     type: select
     proxies:
@@ -328,6 +508,19 @@ proxy-groups:
       - *id015
       - *id016
       - *id017
+      - *id018
+      - *id019
+      - *id020
+      - *id021
+      - *id022
+      - *id023
+      - *id024
+      - *id025
+      - *id026
+      - *id027
+      - *id028
+      - *id029
+      - *id030
 rules:
   - RULE-SET,applications,DIRECT
   - DOMAIN,clash.razord.top,DIRECT
